@@ -4,6 +4,7 @@ export(centroid_distance)
 export(centroid_variance)
 export(congruence_topology)
 export(decorate_graph)
+export(geom_edgelabels)
 export(geom_edgeset)
 export(geom_nodeset)
 export(overlay_popgraph)
